# readmat

./: .Rbuildignore  .Rprofile  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md  cleanup  configure  configure.ac
.github/workflows/: R-CMD-check.yaml
R/: cpp11.R  get-matlab-names.R  get-matlab.R  readmat-package.R  readmat.R  sysdata.rda  zzz.R
inst/bench/: benchmark.R
inst/extdata/: double-cube.mat  double-large-cube.mat  double-mat.mat  int16-cube.mat  int16-mat.mat  int16-vec.mat  multi-object.mat  num-vec.mat  uint16-cube.mat  uint16-mat.mat  unint16-vec.mat
man/: get_matlab.Rd  get_names.Rd  packages.bib  read_mat.Rd
src/: .gitignore  Makevars  Makevars.win  code.cpp  config.hpp.in  cpp11.cpp  get-matlab-names.cpp  get-matlab-types.cpp  getnames.cpp  read-matlab-dbl.cpp  read-matlab-int.cpp  read-matlab.cpp  readheader.cpp  readmat.cpp  readmat.hpp  readobject.cpp  readobject.hpp  readtype.cpp
tests/: testthat.R
tests/testthat/: test-cpp11.R  test-readmat.R
tests/testthat/_snaps/: readmat.md
vignettes/: .gitignore  benchmark.Rmd
